--- a/server/views/layouts/main.html
+++ b/server/views/layouts/main.html
@@ -8,9 +8,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1343574_pp70p9qs4xs.css">
-    <link rel="stylesheet" href="/css/messages.css">
+    <link rel="stylesheet" href="/assets/css/messages.css">
     <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.0.1/weui.min.css">
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.2.1/weui.min.js"></script>
 
     <script type="text/javascript" >
@@ -24,7 +24,7 @@
     <div id="page">
       {{{@body}}}
     </div>
-    <script type="text/javascript" src="/js/messages.js"></script>
+    <script type="text/javascript" src="/assets/js/messages.js"></script>
   </body>
 
 </html>
