--- a/server/views/messages/new.html
+++ b/server/views/messages/new.html
@@ -77,7 +77,7 @@
 <div class="weui-form__extra-area">
   <div class="weui-footer">
 
-    <p class="weui-footer__text">Copyright © 2019 小帮服务</p>
+    <p class="weui-footer__text">Copyright © 2019 小邦服务</p>
   </div>
 </div>
 <script type="text/javascript">
