--- a/public/assets/css/messages.css
+++ b/public/assets/css/messages.css
@@ -5,7 +5,7 @@ body{
 }
 .title {
     padding: 0 10px;
-    background-color: #8ec31f;
+    background-color: #2D44DF;
     line-height: 50px;
     text-align: center;
     color: white;
