--- a/server/views/messages/new.html
+++ b/server/views/messages/new.html
@@ -2,7 +2,7 @@
   <!--校园送货标题title-->
   <div class="weui-flex">
     <div class="weui-flex__item">
-      <div class="title">
+      <div class="title" style="background-color: #2D44DF;">
         <h2>小邦服务</h2>
       </div>
     </div>
