--- a/server/views/messages/new.html
+++ b/server/views/messages/new.html
@@ -64,7 +64,7 @@
           <!--按钮-->
           <div class="weui-flex">
             <div class="weui-flex__item">
-                <button class="weui-btn weui-btn_primary" type="button" id="submitBtn">提 交</button>
+                <button class="weui-btn weui-btn_primary" type="button" id="submitBtn" style="background-color: #2D44DF;">提 交</button>
             </div>
 
           </div>
